syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "GrpcProto";

service CounterProto {
    rpc Count (stream Counters) returns (Empty);
    rpc FileSend (stream Chunk) returns (Empty);
}

message Empty {
}

message Chunk {
    bytes chunk = 1;
}

message Counter {
    int32 id = 1;
    string node_id = 2;
    int32 count = 3;
    google.protobuf.Timestamp record_time = 4;
}

message Counters {
    repeated Counter counter = 1;
}
